--- a/MyDiary.UI/Views/EntriesView.xaml
+++ b/MyDiary.UI/Views/EntriesView.xaml
@@ -127,7 +127,7 @@
                     </Grid>
                 </Border>
 
-                <Button Grid.Row="1" Content="Создать запись" Style="{StaticResource PrimaryButton}" Click="CreateEntryButton_Click" />
+                <Button Grid.Row="1" Content="Создать запись" FontSize="24" Style="{StaticResource PrimaryButton}" Height="88" Click="CreateEntryButton_Click" />
             </Grid>
         </Grid>
     </Grid>
