--- a/MyDiary.UI/Views/RegisterView.xaml
+++ b/MyDiary.UI/Views/RegisterView.xaml
@@ -35,10 +35,30 @@
 
                     <StackPanel Grid.Column="2">
                         <TextBlock Text="Пароль" Foreground="{StaticResource Brush.TextMuted}" Margin="0,0,0,6" />
-                        <PasswordBox Height="40" Margin="0,0,0,12" />
+                        <Grid Margin="0,0,0,12">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="44" />
+                            </Grid.ColumnDefinitions>
+                            <Grid>
+                                <PasswordBox x:Name="PasswordBox" Height="40" PasswordChanged="PasswordBox_PasswordChanged" />
+                                <TextBox x:Name="PasswordTextBox" Height="40" Visibility="Collapsed" TextChanged="PasswordTextBox_TextChanged" />
+                            </Grid>
+                            <Button Grid.Column="1" Content="👁" Style="{StaticResource GhostButton}" MinWidth="44" MinHeight="40" Padding="0" Click="TogglePasswordButton_Click" />
+                        </Grid>
 
                         <TextBlock Text="Повтор пароля" Foreground="{StaticResource Brush.TextMuted}" Margin="0,0,0,6" />
-                        <PasswordBox Height="40" Margin="0,0,0,12" />
+                        <Grid Margin="0,0,0,12">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="44" />
+                            </Grid.ColumnDefinitions>
+                            <Grid>
+                                <PasswordBox x:Name="RepeatPasswordBox" Height="40" PasswordChanged="RepeatPasswordBox_PasswordChanged" />
+                                <TextBox x:Name="RepeatPasswordTextBox" Height="40" Visibility="Collapsed" TextChanged="RepeatPasswordTextBox_TextChanged" />
+                            </Grid>
+                            <Button Grid.Column="1" Content="👁" Style="{StaticResource GhostButton}" MinWidth="44" MinHeight="40" Padding="0" Click="ToggleRepeatPasswordButton_Click" />
+                        </Grid>
                     </StackPanel>
                 </Grid>
 
