доделал меню настроек, добавил отображенеи созданных активностей

--- a/MyDiary.UI/App.xaml
+++ b/MyDiary.UI/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="MyDiary.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="clr-namespace:MyDiary.UI.Converters"
              xmlns:local="clr-namespace:MyDiary.UI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
